--- a/backend/aieng/src/main/resources/application-dev.yml
+++ b/backend/aieng/src/main/resources/application-dev.yml
@@ -1,3 +1,6 @@
+app:
+  domain: http://localhost:5173
+
 spring:
   jpa:
     hibernate:
@@ -10,7 +13,7 @@ spring:
   datasource:
     url: jdbc:mariadb://localhost:3306/aieng
     username: aieng
-    password: b104
+    password: b104B104
     driver-class-name: org.mariadb.jdbc.Driver
 
   data:
