--- a/backend/aieng/src/main/resources/application-dev.yml
+++ b/backend/aieng/src/main/resources/application-dev.yml
@@ -9,7 +9,7 @@ spring:
 
   datasource:
     url: jdbc:mariadb://localhost:3306/aieng
-    username: aieng
+    username: root
     password: b104
     driver-class-name: org.mariadb.jdbc.Driver
 
