--- a/frontend/AIENG/package.json
+++ b/frontend/AIENG/package.json
@@ -21,7 +21,8 @@
     "react-native": "0.76.9",
     "react-native-paper": "^5.13.5",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0"
+    "react-native-screens": "~4.4.0",
+    "expo-linear-gradient": "~14.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
