--- a/frontend/AIENG/package.json
+++ b/frontend/AIENG/package.json
@@ -12,21 +12,21 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
-    "expo": "~52.0.46",
-    "expo-av": "~15.0.2",
-    "expo-font": "~13.0.4",
-    "expo-screen-orientation": "~8.0.4",
-    "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
-    "react-native": "0.76.9",
+    "expo": "^53.0.8",
+    "expo-av": "~15.1.4",
+    "expo-font": "~13.3.1",
+    "expo-linear-gradient": "~14.1.4",
+    "expo-screen-orientation": "~8.1.6",
+    "expo-status-bar": "~2.2.3",
+    "react": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-paper": "^5.13.5",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "expo-linear-gradient": "~14.0.2"
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "typescript": "^5.3.3"
   },
   "private": true
