--- a/backend/aieng/src/main/resources/application-dev.yml
+++ b/backend/aieng/src/main/resources/application-dev.yml
@@ -4,7 +4,7 @@ app:
 spring:
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     properties:
       hibernate:
         format_sql: true
