--- a/backend/aieng/src/main/resources/application-dev.yml
+++ b/backend/aieng/src/main/resources/application-dev.yml
@@ -8,7 +8,9 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        dialect: org.hibernate.dialect.MariaDBDialect
     defer-datasource-initialization: true
+    show-sql: true
 
   datasource:
     url: jdbc:mariadb://localhost:3306/aieng
@@ -16,25 +18,19 @@ spring:
     password: b104B104
     driver-class-name: org.mariadb.jdbc.Driver
 
-  data:
-    redis:
-      host: localhost
-      port: 6379
-      password:
-
   sql:
     init:
       mode: always
+      platform: mariadb
+      continue-on-error: true
 
   main:
     allow-bean-definition-overriding: true
 
-
 logging:
   level:
-    root: debug  # 전체 로그 레벨을 debug로 설정 (추천)
-    com.ssafy.aieng: debug  # 또는 특정 패키지에 대해서만 debug로 설정
-
+    root: debug
+    com.ssafy.aieng: debug
     org.hibernate.SQL: warn
     com.zaxxer.hikari.HikariConfig: OFF
     com.zaxxer.hikari: OFF
