--- a/backend/aieng/src/main/resources/application-dev.yml
+++ b/backend/aieng/src/main/resources/application-dev.yml
@@ -32,12 +32,12 @@ spring:
 
 logging:
   level:
-    root: debug  # 전체 로그 레벨을 debug로 설정 (추천)
-    com.ssafy.aieng: debug  # 또는 특정 패키지에 대해서만 debug로 설정
+    root: info  # 전체 로그는 info 수준으로 제한
+    com.ssafy.aieng: debug  # 우리 프로젝트만 디버그 수준 유지
 
-    org.hibernate.SQL: warn
-    com.zaxxer.hikari.HikariConfig: OFF
-    com.zaxxer.hikari: OFF
+    org.hibernate.SQL: warn  # SQL 로그 줄임
+    com.zaxxer.hikari.HikariConfig: off  # 커넥션 풀 로그 제거
+    com.zaxxer.hikari: off
 
 oauth:
   kakao:
