--- a/frontend/AIENG/package.json
+++ b/frontend/AIENG/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-seoul/kakao-login": "^5.4.1",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
+    "axios": "^1.9.0",
     "expo": "^53.0.8",
     "expo-av": "~15.1.4",
+    "expo-build-properties": "~0.14.6",
     "expo-font": "~13.3.1",
     "expo-linear-gradient": "~14.1.4",
     "expo-screen-orientation": "~8.1.6",
@@ -22,7 +26,9 @@
     "react-native": "0.79.2",
     "react-native-paper": "^5.13.5",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0"
+    "react-native-screens": "~4.10.0",
+    "expo-linking": "~7.1.4",
+    "expo-web-browser": "~14.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
