--- a/backend/aieng/src/main/resources/application-prod.yml
+++ b/backend/aieng/src/main/resources/application-prod.yml
@@ -42,7 +42,7 @@ server:
 
 oauth:
   kakao:
-    redirect-uri: https://www.aieng.co.kr/oauth/kakao/callback
+    redirect-uri: aieng://oauth/kakao/callback
   google:
     redirect-uri: https://www.aieng.co.kr/oauth/google/callback
   naver:
