--- a/frontend/AIENG/package.json
+++ b/frontend/AIENG/package.json
@@ -32,7 +32,8 @@
     "react-native": "0.79.2",
     "react-native-paper": "^5.13.5",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0"
+    "react-native-screens": "~4.10.0",
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
