feat : 아이 테마 조회 및 테마별 단어 조회

--- a/backend/aieng/src/main/resources/application-dev.yml
+++ b/backend/aieng/src/main/resources/application-dev.yml
@@ -27,6 +27,11 @@ spring:
   main:
     allow-bean-definition-overriding: true
 
+  data:
+    redis:
+      host: localhost
+      port: 6379
+
 logging:
   level:
     root: info  # 전체 로그는 info 수준으로 제한
