--- a/frontend/AIENG/android/gradle.properties
+++ b/frontend/AIENG/android/gradle.properties
@@ -57,5 +57,5 @@ expo.useLegacyPackaging=false
 
 # Whether the app is configured to use edge-to-edge via the app config or `react-native-edge-to-edge` plugin
 expo.edgeToEdgeEnabled=false
-# android.kotlinVersion=1.9.0  // 중복 방지 및 충돌 방지 위해 주석 처리
+android.kotlinVersion=1.5.10
 android.extraMavenRepos=[{"url":"https://devrepo.kakao.com/nexus/content/groups/public/"}]
