--- a/frontend/AIENG/android/build.gradle
+++ b/frontend/AIENG/android/build.gradle
@@ -6,9 +6,10 @@ buildscript {
     mavenCentral()
   }
   dependencies {
-    classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.0'
+          classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.10'
     classpath('com.android.tools.build:gradle')
     classpath('com.facebook.react:react-native-gradle-plugin')
+    classpath('org.jetbrains.kotlin:kotlin-gradle-plugin')
   }
 }
 
