--- a/frontend/AIENG/package.json
+++ b/frontend/AIENG/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@miblanchard/react-native-slider": "^2.6.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/slider": "^4.5.6",
     "@react-native-kakao/core": "^2.4.0",
