--- a/backend/aieng/src/main/resources/application-dev.yml
+++ b/backend/aieng/src/main/resources/application-dev.yml
@@ -14,8 +14,8 @@ spring:
 
   datasource:
     url: jdbc:mariadb://localhost:3306/aieng
-    username: root
-    password: 1234
+    username: aieng
+    password: b104B104
     driver-class-name: org.mariadb.jdbc.Driver
 
   sql:
