Feat: EAS release APK 빌드 설정 [S12P31B104-142]

--- a/frontend/AIENG/eas.json
+++ b/frontend/AIENG/eas.json
@@ -10,7 +10,13 @@
     "preview": {
       "distribution": "internal"
     },
-    "production": {}
+    "production": {
+      "android": {
+        "buildType": "apk",
+        "gradleCommand": ":app:bundleRelease",
+        "autoIncrement": true
+      }
+    }
   },
   "submit": {
     "production": {}
