Fix: EAS release APK 빌드 설정2 [S12P31B104-142]

--- a/frontend/AIENG/eas.json
+++ b/frontend/AIENG/eas.json
@@ -1,6 +1,7 @@
 {
   "cli": {
-    "version": ">= 5.4.0"
+    "version": ">= 5.4.0",
+    "appVersionSource": "remote"
   },
   "build": {
     "development": {
@@ -13,7 +14,6 @@
     "production": {
       "android": {
         "buildType": "apk",
-        "gradleCommand": ":app:bundleRelease",
         "autoIncrement": true
       }
     }
